--- a/.github/workflows/rails_test.yml
+++ b/.github/workflows/rails_test.yml
@@ -1,7 +1,7 @@
 # doc: https://docs.github.com/ja/enterprise-cloud@latest/actions/automating-builds-and-tests/building-and-testing-ruby
 name: Rails Test
 
-on: [push, pull_request]
+on: [ push ]
 
 jobs:
   test:
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: '3.2'
+          ruby-version: '3.2.0'
       - name: Install dependencies
         run: |
           bundle config set --local without 'production'
