--- a/.github/workflows/rails_test.yml
+++ b/.github/workflows/rails_test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: '3.2.0'
+          bundler-cache: true
       - name: Install dependencies
         run: |
           bundle config set --local without 'production'
